logs/channel_tagging_v8_10610303.err
/pool/condor/dir_1254308/condor_wrapper_channel_tagging.sh: line 30: nvidia-smi: command not found
2025-11-06 16:55:09.513624: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.
To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.
2025-11-06 16:55:13.709635: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT
Traceback (most recent call last):
  File "/afs/cern.ch/work/e/evilla/private/dune/ml_for_pointing/channel_tagging/ct_training.py", line 336, in <module>
    main()
  File "/afs/cern.ch/work/e/evilla/private/dune/ml_for_pointing/channel_tagging/ct_training.py", line 209, in main
    selected_model = select_model(model_name)
                     ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/afs/cern.ch/work/e/evilla/private/dune/ml_for_pointing/channel_tagging/ct_training.py", line 150, in select_model
    import models.hyperopt_simple_cnn as selected_model
  File "/afs/cern.ch/work/e/evilla/private/dune/ml_for_pointing/channel_tagging/models/hyperopt_simple_cnn.py", line 29
    model.add(layers.MaxPooling2D((2, 2)))    model.add(layers.Flatten())
                                              ^^^^^
SyntaxError: invalid syntax
